UI changes to fix alignment of Service info and some role based changes

--- a/src/app/components/core/developer/manage-services/manage-service-modal/manage-service-modal.component.css
+++ b/src/app/components/core/developer/manage-services/manage-service-modal/manage-service-modal.component.css
@@ -66,8 +66,9 @@ hr {
 
 .service-info {
   white-space: nowrap;
+  padding-bottom: 8px !important;
 }
 
 .service-info-padding {
-  padding-left: 6rem !important;
+  padding-left: 6.1rem !important;
 }
